<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode ="true"
    >

    <ImageView
        android:id="@+id/background_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="40"
        android:alpha="0.85"
        android:scaleType="centerCrop"
        app:srcCompat="@color/cardview_dark_background" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:id="@+id/super_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        android:paddingTop="0dp">

        <ImageView
            android:id="@+id/icon"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Roome Logo"
            android:src="@mipmap/logo_word"
            android:padding="5px"

            />



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:gravity="top|center_horizontal"
            android:animateLayoutChanges="true"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <LinearLayout
                    android:id="@+id/email_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.42"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:visibility="visible"
                    android:paddingRight="16dp"
                    android:background="@drawable/round_corners_bg"
                    android:focusable="true"
                    android:paddingTop="7dp"
                    android:paddingBottom="12dp"
                    android:focusableInTouchMode ="true">

                    <EditText
                        android:id="@+id/field_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_email"
                        android:fontFamily="sans-serif-black"
                        android:inputType="textEmailAddress" />

                </LinearLayout>


            <LinearLayout
                    android:id="@+id/password_field"
                    android:layout_width="match_parent"
                    android:layout_below="@id/email_field"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.42"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/round_corners_bg"
                    android:visibility="visible"
                    android:paddingRight="16dp"
                    android:paddingBottom="12dp"
                    android:paddingTop="7dp"
                    android:focusable="true"
                    android:focusableInTouchMode ="true">

                    <EditText
                        android:id="@+id/field_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_password"
                        android:fontFamily="sans-serif-black"
                        android:inputType="textPassword" />

                </LinearLayout>

            <LinearLayout
                android:id="@+id/email_password_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/password_field"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="visible"
                >

                <Button
                    android:id="@+id/email_create_account_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="sans-serif-condensed"
                    android:background="@drawable/round_corner_button"
                    android:text="@string/create_account"
                   />

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="20dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:background="@drawable/round_corner_button_primary"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/sign_in" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/google_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible"
                android:layout_below="@id/email_password_buttons"
                android:focusable="true"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:focusableInTouchMode ="true">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />



            </LinearLayout>

            <LinearLayout
                android:id="@+id/facebook_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/google_field"
                android:orientation="horizontal"
                android:visibility="visible"
                android:focusable="true"
                android:paddingBottom="10dp"
                android:focusableInTouchMode ="true">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signed_in_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:visibility="gone"
                android:weightSum="2">

                <Button
                    android:id="@+id/sign_out_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_out"
                    android:fontFamily="sans-serif-condensed"
                    style="@style/Widget.AppCompat.Button.Colored"
                    />

                <Button
                    android:id="@+id/verify_email_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/verify_email"
                    android:fontFamily="sans-serif-condensed"/>

                <Button
                    android:id="@+id/proceed_to_list_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/Continue"
                    android:visibility="gone"
                    android:fontFamily="sans-serif-condensed"/>

            </LinearLayout>

        </RelativeLayout>



        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginBottom="150dp"
            android:text="@string/emailpassword_title_text" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyLightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="@string/signed_out" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyLightEditText"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="Firebase User ID: 123456789abc" />


    </LinearLayout>

</ScrollView>


    </RelativeLayout>